[gd_scene load_steps=9 format=3 uid="uid://cp5ps37nhx5b2"]

[ext_resource type="Script" uid="uid://d23epejbag2d" path="res://Scripts/game_score_window.gd" id="1_6ktah"]
[ext_resource type="FontFile" uid="uid://dp6y5fs1725mc" path="res://Assets/Pixel_Art/Public_Pixel_Font_1_24/PublicPixel.ttf" id="1_tqysd"]

[sub_resource type="Theme" id="Theme_tqysd"]
VBoxContainer/constants/separation = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4x673"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0ny8"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ktah"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lewy3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjq6k"]
bg_color = Color(0, 0, 0, 1)

[node name="GameScoreWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ktah")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.165
anchor_right = 1.0
anchor_bottom = 0.52900004
offset_top = 20.799995
offset_bottom = 21.079987
grow_horizontal = 2
theme = SubResource("Theme_tqysd")
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_tqysd")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_4x673")
text = "SOLVED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="MC" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_tqysd")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_x0ny8")
text = "Move Count"
horizontal_alignment = 1

[node name="MoveCnt" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_tqysd")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_6ktah")
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TT" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_tqysd")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_lewy3")
text = "Time Taken"
horizontal_alignment = 1

[node name="TimeTaken" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_tqysd")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_bjq6k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_tqysd")
theme_override_font_sizes/font_size = 8
text = "Restart Game"

[node name="NextGame" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_tqysd")
theme_override_font_sizes/font_size = 8
text = "Next Game"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/NextGame" to="." method="_on_next_game_button_up"]
